changed get requests to work with params
